# gh-actions-sample

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-checks.yml  cmake-multi-platform.yml  cpp-linter.yml
cmake/: clang-toolchain.cmake  gcc-toolchain.cmake
scripts/: build.py  format.py  tidy.py
source/: main.cpp  pch.hpp
source/util/: array2d.hpp  combinations.cpp  combinations.hpp  graph.cpp  graph.hpp  json.cpp  json.hpp  log.hpp  math_helpers.cpp  math_helpers.hpp  md5_hash.cpp  md5_hash.hpp  memo.hpp  text_helpers.cpp  text_helpers.hpp  thread_pool.cpp  thread_pool.hpp
